<resources>
    <string name="app_name">awaker</string>
    <string name="launch_desc">不只是讨论外星人</string>

    <string name="adv_type">APP首页轮播</string>

    <string name="home">首页</string>
    <string name="news">资讯</string>
    <string name="video">视频精选</string>

    <string name="ufo_et">UFO与外星人</string>
    <string name="conspiracy_theory">阴谋论</string>
    <string name="spirit_awaker">灵性觉醒</string>
    <string name="free_energy">自由能源</string>

    <string name="normal">默认</string>
    <string name="full_player">点击召唤大窗口看视频</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="loading_desc">正在加载</string>
    <string name="loaded_desc">没有更多了</string>

    <string name="all_info">全部资讯</string>
    <string name="nice_massage">热门吐槽</string>
    <string name="week_hot">一周热读</string>
    <string name="week_hot_massage">一周热评</string>
    <string name="ufo_and_et">ufo与外星人</string>
    <string name="un_one">未解之谜</string>
    <string name="mai_tian">麦田圈</string>
    <string name="error_thing">异常事件</string>
    <string name="yin_mou">阴谋论</string>
    <string name="gong_ji">共济会</string>
    <string name="ji_yin">反转基因</string>
    <string name="awaker_spirit">灵性觉醒</string>
    <string name="ke_xue">科学探索</string>
    <string name="free_neng_yuan">自由能源</string>
    <string name="guan_jian">关键时刻</string>
    <string name="other">其它</string>

    <string name="comment_guest">觉醒访客</string>
    <string name="up_comment_title">热门评论</string>
    <string name="up_comment_more">更多评论</string>
    <string name="up_comment_click_more">查看更多评论</string>
    <string name="comment_count">%1$s 跟帖</string>

    <string name="comment_suc">评论成功</string>
    <string name="add_comment">添加评论</string>
    <string name="new_comment_count">评论( %1$s )</string>

    <string name="welcome_back">%1$s 欢迎回来</string>
    <string name="login">登录</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="password2">确认密码</string>
    <string name="login_error">帐号或密码错误</string>
    <string name="register_error">注册失败噢</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_desc">是否要退出登录？</string>
    <string name="login_out_finish">已退出登录</string>
    <string name="login_no">你还没有登录噢</string>

    <string name="register">注册</string>
    <string name="wait">请稍等</string>
    <string name="email">邮箱</string>
    <string name="nike">昵称</string>
    <string name="pwd_check">两次输入的密码不一致</string>

    <string name="other_desc_str">你渴望得到力量吗?</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="develop_desc">关于</string>
    <string name="cache_clear">缓存</string>
    <string name="cache_clear_desc">是否清除缓存?</string>
    <string name="cache_clear_finish">清除缓存完成</string>
    <string name="user_back">反馈</string>
    <string name="user_back_title">有什么要跟开发者说的：</string>
    <string name="user_back_content">发送一封邮件给开发者</string>
    <string name="send_email">发送邮件</string>
    <string name="send_email_content">是否发送一封邮件给开发者?</string>
    <string name="send_email_finish">邮件发送成功</string>

    <string name="develop_desc_content">这是一个开源项目</string>
    <string name="develop_desc_content2">你有机会与开发者一起维护awaker</string>
    <string name="awaker_link">https://github.com/ruzhan123/awaker</string>


    <string name="play_develop">打赏开发者</string>
    <string name="create_mail_fail">创建带附件的邮件失败</string>

    <string name="article">article</string>
    <string name="movie">movie</string>


</resources>
