<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/f5"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Awaker.ToolBar"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_large_2"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="#FF383838"
                    android:textSize="48sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_normal"
                    android:gravity="center_horizontal"
                    android:text="@string/launch_desc"
                    android:textColor="#FF9B9B9B"
                    android:textSize="@dimen/text_size_small_1" />

                <TextView
                    android:id="@+id/version_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small_1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_small_2" />


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/space_large_1"
                    android:layout_marginTop="@dimen/space_large_2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_gongjihui2" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_large_2"
                    android:gravity="center_horizontal"
                    android:text="@string/develop_desc_content"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_normal"
                    android:gravity="center_horizontal"
                    android:text="@string/develop_desc_content2"
                    android:textColor="@color/themePrimary"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_normal"
                    android:autoLink="web"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="@dimen/space_normal"
                    android:padding="@dimen/space_normal"
                    android:text="@string/awaker_link"
                    android:textColor="@color/text_color"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>