<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.future.awaker.login.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/f5"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Awaker.ToolBar"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large_2"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#FF383838"
            android:textSize="48sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:gravity="center_horizontal"
            android:text="@string/launch_desc"
            android:textColor="#FF9B9B9B"
            android:textSize="@dimen/text_size_small_1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large_1"
            android:paddingEnd="@dimen/space_large_2"
            android:paddingStart="@dimen/space_large_2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/account"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingEnd="@dimen/space_small_1"
                android:paddingStart="@dimen/space_small_1"
                android:text="@={viewModel.loginAccountStr}"
                android:textColor="@color/text_color"
                android:textColorHint="#FFAAAAAA"
                android:textSize="@dimen/text_size_normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small_1"
            android:paddingEnd="@dimen/space_large_2"
            android:paddingStart="@dimen/space_large_2"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pwd_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/space_small_1"
                android:paddingStart="@dimen/space_small_1"
                android:text="@={viewModel.loginPwdStr}"
                android:textColor="@color/text_color"
                android:textColorHint="#FFAAAAAA"
                android:textSize="@dimen/text_size_normal" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/space_large_2"
            android:layout_marginRight="@dimen/space_large_2"
            android:layout_marginTop="@dimen/space_large_3"
            android:background="@drawable/selector_account_bg"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</layout>