<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.future.awaker.setting.viewmodel.UserBackViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/f5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Awaker.ToolBar"
            app:titleTextAppearance="@style/Toolbar.TitleText" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_normal"
            android:text="@string/user_back_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_margin="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_normal"
            android:background="@drawable/shape_stroke"
            android:gravity="top|start"
            android:hint="@string/user_back_content"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:lineSpacingExtra="@dimen/space_small_1"
            android:padding="@dimen/space_small_1"
            android:text="@={viewModel.contentStr}"
            android:textColor="@color/text_color"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_small_1"
            android:theme="@style/CommentEditText" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/space_large_2"
            android:layout_marginRight="@dimen/space_large_2"
            android:background="@drawable/selector_account_bg"
            android:enabled="false"
            android:text="@string/send_email"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</layout>